Rename to vcf-enhanced-date-picker

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaadin-date-picker",
+  "name": "vcf-enhanced-date-picker",
   "homepage": "https://vaadin.com/components",
   "description": "Polymer element providing a date selection field with scrollable month calendar",
   "authors": [
@@ -14,14 +14,14 @@
     "picker"
   ],
   "main": [
-    "vaadin-date-picker.html",
-    "vaadin-date-picker-light.html",
-    "theme/material/vaadin-date-picker-light.html",
-    "theme/material/vaadin-date-picker.html"
+    "vcf-enhanced-date-picker.html",
+    "vcf-enhanced-date-picker-light.html",
+    "theme/material/vcf-enhanced-date-picker-light.html",
+    "theme/material/vcf-enhanced-date-picker.html"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/vaadin/vaadin-date-picker"
+    "url": "git://github.com/vaadin-component-factory/vcf-enhanced-date-picker"
   },
   "license": "Apache-2.0",
   "ignore": [
