--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "repository": "vaadin-component-factory/vcf-enhanced-date-picker",
   "keywords": [
     "Vaadin",
+    "Vaadin Component Factory",
+    "vcf",
     "date-picker",
     "web-components",
     "web-component",
     "polymer"
   ],
   "author": "Vaadin Ltd",
-  "license": "Apache-2.0",
+  "license": "https://vaadin.com/license/cval-3.0",
   "bugs": {
     "url": "https://github.com/vaadin-component-factory/vcf-enhanced-date-picker/issues"
   },
@@ -37,7 +39,7 @@
     "lint:html": "eslint *.html src demo test --ext .html",
     "lint:js": "eslint *.js test",
     "lint:polymer": "polymer lint --rules polymer-2 --input ./src/*.html ./theme/**/*.html",
-    "prestart": "polymer analyze vaadin-* > analysis.json",
+    "prestart": "polymer analyze vcf-* > analysis.json",
     "start": "polymer serve --port 3000 --open",
     "preversion": "magi update-version"
   },
